Aggiunta tasto syntactic tree

--- a/NSG_website/NSG.html
+++ b/NSG_website/NSG.html
@@ -44,7 +44,10 @@
       <button class="copy-button" onclick="onCopyClick()" title="Copy the generated output" id="copyBtn">Copy</button>
     </div>
   </div>
-
+  <div class="Syntactic-Tree-container">
+    <label for="syntacticTree">Syntactic Tree</label>
+    <input type="checkbox" id="syntacticTree" name="syntacticTree">
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
